Feature #9 : Ecran post appel

--- a/translations/jsonFromDesktop/en.json
+++ b/translations/jsonFromDesktop/en.json
@@ -1,5 +1,6 @@
 {
 	"audio_call_activity_calling": "Calling…",
+	"calls_fragment_call_again_title": "Call back",
 	"audio_call_activity_cannot_call": "Cannot make a voice call",
 	"audio_call_activity_connecting": "Connecting…",
 	"audio_call_activity_hangup": "Hang-up",
