--- a/translations/jsonFromDesktop/fr.json
+++ b/translations/jsonFromDesktop/fr.json
@@ -1,5 +1,6 @@
 {
 	"audio_call_activity_calling": "Appel…",
+	"calls_fragment_call_again_title": "Rappeler",
 	"audio_call_activity_cannot_call": "Impossible de passer un appel vocal",
 	"audio_call_activity_connecting": "Connexion…",
 	"audio_call_activity_hangup": "Raccrocher",
