--- a/translations/translations.json
+++ b/translations/translations.json
@@ -1,30 +1,30 @@
 [
 	{
 		"key": "thanks_choosing",
-		"en": "Thanks for choosing twinme!",
-		"fr": "Merci d'avoir choisi twinme !",
-		"ar": "شكرا لاختيارك twinme!",
-		"cn": "感谢您选择twinme！",
-		"tw": "感謝您選擇twinme！",
-		"dk": "Tak, fordi du valgte twinme!",
-		"nl": "Bedankt voor het kiezen van twinme!",
-		"fi": "Kiitos kun valitsit twinme!",
-		"de": "Vielen Dank, dass Sie sich für Twinme entschieden haben!",
-		"he": "תודה שבחרת ב-twinme!",
-		"hi": "twinme चुनने के लिए धन्यवाद!",
-		"in": "Terima kasih telah memilih twinme!",
-		"it": "Grazie per aver scelto twinme!",
-		"jp": "twinmeをお選びいただきありがとうございます！",
-		"kr": "twinme를 선택해 주셔서 감사합니다!",
-		"no": "Takk for at du valgte twinme!",
-		"fa": "از انتخاب twinme متشکریم!",
-		"pl": "Dziękujemy za wybranie twinme!",
-		"pt": "Obrigado por escolher o twinme!",
-		"ru": "Спасибо, что выбрали twinme!",
-		"sp": "¡Gracias por elegir twinme!",
-		"su": "Tack för att du valde twinme!",
-		"tu": "twinme seçtiğiniz için teşekkürler!",
-		"uk": "Дякуємо, що вибрали twinme!"
+		"en": "Thanks for choosing {{appName}}!",
+		"fr": "Merci d'avoir choisi {{appName}} !",
+		"ar": "شكرا لاختيارك {{appName}}!",
+		"cn": "感谢您选择{{appName}}！",
+		"tw": "感謝您選擇{{appName}}！",
+		"dk": "Tak, fordi du valgte {{appName}}!",
+		"nl": "Bedankt voor het kiezen van {{appName}}!",
+		"fi": "Kiitos kun valitsit {{appName}}!",
+		"de": "Vielen Dank, dass Sie sich für {{appName}} entschieden haben!",
+		"he": "תודה שבחרת ב-{{appName}}!",
+		"hi": "{{appName}} चुनने के लिए धन्यवाद!",
+		"in": "Terima kasih telah memilih {{appName}}!",
+		"it": "Grazie per aver scelto {{appName}}!",
+		"jp": "{{appName}}をお選びいただきありがとうございます！",
+		"kr": "{{appName}}를 선택해 주셔서 감사합니다!",
+		"no": "Takk for at du valgte {{appName}}!",
+		"fa": "از انتخاب {{appName}} متشکریم!",
+		"pl": "Dziękujemy za wybranie {{appName}}!",
+		"pt": "Obrigado por escolher o {{appName}}!",
+		"ru": "Спасибо, что выбрали {{appName}}!",
+		"sp": "¡Gracias por elegir {{appName}}!",
+		"su": "Tack för att du valde {{appName}}!",
+		"tu": "{{appName}} seçtiğiniz için teşekkürler!",
+		"uk": "Дякуємо, що вибрали {{appName}}!"
 	},
 	{
 		"key": "next_time_app",
@@ -79,33 +79,6 @@
 		"su": "Mer information om",
 		"tu": "Daha fazla bilgi",
 		"uk": "Більше інформації про"
-	},
-	{
-		"key": "website_link",
-		"en": "<strong><a href='https://twin.me' target='_blank'>twinme</a></strong>",
-		"fr": "<strong><a href='https://twin.me' target='_blank'>twinme</a></strong>",
-		"ar": "<strong><a href='https://twin.me' target='_blank'>twinme</a></strong>",
-		"cn": "<strong><a href='https://twin.me' target='_blank'>twinme</a></strong>",
-		"tw": "<strong><a href='https://twin.me' target='_blank'>twinme</a></strong>",
-		"dk": "<strong><a href='https://twin.me' target='_blank'>twinme</a></strong>",
-		"nl": "<strong><a href='https://twin.me' target='_blank'>twinme</a></strong>",
-		"fi": "<strong><a href='https://twin.me' target='_blank'>twinme</a></strong>",
-		"de": "<strong><a href='https://twin.me' target='_blank'>twinme</a></strong>",
-		"he": "<strong><a href='https://twin.me' target='_blank'>twinme</a></strong>",
-		"hi": "<strong><a href='https://twin.me' target='_blank'>twinme</a></strong>",
-		"in": "<strong><a href='https://twin.me' target='_blank'>twinme</a></strong>",
-		"it": "<strong><a href='https://twin.me' target='_blank'>twinme</a></strong>",
-		"jp": "<strong><a href='https://twin.me' target='_blank'>twinme</a></strong>",
-		"kr": "<strong><a href='https://twin.me' target='_blank'>twinme</a></strong>",
-		"no": "<strong><a href='https://twin.me' target='_blank'>twinme</a></strong>",
-		"fa": "<strong><a href='https://twin.me' target='_blank'>twinme</a></strong>",
-		"pl": "<strong><a href='https://twin.me' target='_blank'>twinme</a></strong>",
-		"pt": "<strong><a href='https://twin.me' target='_blank'>twinme</a></strong>",
-		"ru": "<strong><a href='https://twin.me' target='_blank'>twinme</a></strong>",
-		"sp": "<strong><a href='https://twin.me' target='_blank'>twinme</a></strong>",
-		"su": "<strong><a href='https://twin.me' target='_blank'>twinme</a></strong>",
-		"tu": "<strong><a href='https://twin.me' target='_blank'>twinme</a></strong>",
-		"uk": "<strong><a href='https://twin.me' target='_blank'>twinme</a></strong>"
 	},
 	{
 		"key": "call",
