--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -1,1 +1,13 @@
-{"translation":{"thanks_choosing":"Vielen Dank, dass Sie sich für Twinme entschieden haben!","next_time_app":"Probieren Sie die mobile App aus, um das volle Erlebnis zu genießen!","more_information":"Weitere Informationen zu","website_link":"<strong><a href='https://twin.me' target='_blank'>twinme</a></strong>","call":"Rufen","call_back":"Rufen Sie zurück oder aktivieren Sie den Link erneut.","activate_camera":"Aktivieren Sie Ihre Kamera","nickname_placeholder":"Name","nickname_empty_error":"Wählen Sie einen Namen","guest":"Gast"}}
+{
+    "translation": {
+        "thanks_choosing": "Vielen Dank, dass Sie sich für {{appName}} entschieden haben!",
+        "next_time_app": "Probieren Sie die mobile App aus, um das volle Erlebnis zu genießen!",
+        "more_information": "Weitere Informationen zu",
+        "call": "Rufen",
+        "call_back": "Rufen Sie zurück oder aktivieren Sie den Link erneut.",
+        "activate_camera": "Aktivieren Sie Ihre Kamera",
+        "nickname_placeholder": "Name",
+        "nickname_empty_error": "Wählen Sie einen Namen",
+        "guest": "Gast"
+    }
+}
