--- a/src/i18n/dk.json
+++ b/src/i18n/dk.json
@@ -1,1 +1,13 @@
-{"translation":{"thanks_choosing":"Tak, fordi du valgte twinme!","next_time_app":"Prøv mobilappen for at få den fulde oplevelse!","more_information":"Mere information vedr","website_link":"<strong><a href='https://twin.me' target='_blank'>twinme</a></strong>","call":"Opkald","call_back":"Ring tilbage eller genaktiver linket.","activate_camera":"Aktiver dit kamera","nickname_placeholder":"Navn","nickname_empty_error":"Vælg et navn","guest":"Gæst"}}
+{
+    "translation": {
+        "thanks_choosing": "Tak, fordi du valgte {{appName}}!",
+        "next_time_app": "Prøv mobilappen for at få den fulde oplevelse!",
+        "more_information": "Mere information vedr",
+        "call": "Opkald",
+        "call_back": "Ring tilbage eller genaktiver linket.",
+        "activate_camera": "Aktiver dit kamera",
+        "nickname_placeholder": "Navn",
+        "nickname_empty_error": "Vælg et navn",
+        "guest": "Gæst"
+    }
+}
