--- a/src/i18n/hi.json
+++ b/src/i18n/hi.json
@@ -1,1 +1,13 @@
-{"translation":{"thanks_choosing":"twinme चुनने के लिए धन्यवाद!","next_time_app":"पूर्ण अनुभव के लिए मोबाइल ऐप आज़माएं!","more_information":"पर अधिक जानकारी","website_link":"<strong><a href='https://twin.me' target='_blank'>twinme</a></strong>","call":"पुकारना","call_back":"वापस कॉल करें या लिंक को पुनः सक्रिय करें।","activate_camera":"अपना कैमरा सक्रिय करें","nickname_placeholder":"नाम","nickname_empty_error":"एक नाम चुनें","guest":"अतिथि"}}
+{
+    "translation": {
+        "thanks_choosing": "{{appName}} चुनने के लिए धन्यवाद!",
+        "next_time_app": "पूर्ण अनुभव के लिए मोबाइल ऐप आज़माएं!",
+        "more_information": "पर अधिक जानकारी",
+        "call": "पुकारना",
+        "call_back": "वापस कॉल करें या लिंक को पुनः सक्रिय करें।",
+        "activate_camera": "अपना कैमरा सक्रिय करें",
+        "nickname_placeholder": "नाम",
+        "nickname_empty_error": "एक नाम चुनें",
+        "guest": "अतिथि"
+    }
+}
