--- a/src/i18n/in.json
+++ b/src/i18n/in.json
@@ -1,1 +1,13 @@
-{"translation":{"thanks_choosing":"Terima kasih telah memilih twinme!","next_time_app":"Coba aplikasi seluler untuk pengalaman penuh!","more_information":"Informasi lebih lanjut tentang","website_link":"<strong><a href='https://twin.me' target='_blank'>twinme</a></strong>","call":"Panggilan","call_back":"Hubungi kembali atau aktifkan kembali tautan tersebut.","activate_camera":"Aktifkan kamera Anda","nickname_placeholder":"Nama","nickname_empty_error":"Pilih nama","guest":"Tamu"}}
+{
+    "translation": {
+        "thanks_choosing": "Terima kasih telah memilih {{appName}}!",
+        "next_time_app": "Coba aplikasi seluler untuk pengalaman penuh!",
+        "more_information": "Informasi lebih lanjut tentang",
+        "call": "Panggilan",
+        "call_back": "Hubungi kembali atau aktifkan kembali tautan tersebut.",
+        "activate_camera": "Aktifkan kamera Anda",
+        "nickname_placeholder": "Nama",
+        "nickname_empty_error": "Pilih nama",
+        "guest": "Tamu"
+    }
+}
