--- a/src/i18n/it.json
+++ b/src/i18n/it.json
@@ -1,1 +1,13 @@
-{"translation":{"thanks_choosing":"Grazie per aver scelto twinme!","next_time_app":"Prova l'app mobile per un'esperienza completa!","more_information":"Maggiori informazioni su","website_link":"<strong><a href='https://twin.me' target='_blank'>twinme</a></strong>","call":"Chiamata","call_back":"Richiama o riattiva il link.","activate_camera":"Attiva la fotocamera","nickname_placeholder":"Nome","nickname_empty_error":"Scegli un nome","guest":"Ospite"}}
+{
+    "translation": {
+        "thanks_choosing": "Grazie per aver scelto {{appName}}!",
+        "next_time_app": "Prova l'app mobile per un'esperienza completa!",
+        "more_information": "Maggiori informazioni su",
+        "call": "Chiamata",
+        "call_back": "Richiama o riattiva il link.",
+        "activate_camera": "Attiva la fotocamera",
+        "nickname_placeholder": "Nome",
+        "nickname_empty_error": "Scegli un nome",
+        "guest": "Ospite"
+    }
+}
