--- a/src/i18n/nl.json
+++ b/src/i18n/nl.json
@@ -1,1 +1,13 @@
-{"translation":{"thanks_choosing":"Bedankt voor het kiezen van twinme!","next_time_app":"Probeer de mobiele app voor de volledige ervaring!","more_information":"Meer informatie op","website_link":"<strong><a href='https://twin.me' target='_blank'>twinme</a></strong>","call":"Telefoongesprek","call_back":"Bel terug of activeer de link opnieuw.","activate_camera":"Activeer je camera","nickname_placeholder":"Naam","nickname_empty_error":"Kies een naam","guest":"Gast"}}
+{
+    "translation": {
+        "thanks_choosing": "Bedankt voor het kiezen van {{appName}}!",
+        "next_time_app": "Probeer de mobiele app voor de volledige ervaring!",
+        "more_information": "Meer informatie op",
+        "call": "Telefoongesprek",
+        "call_back": "Bel terug of activeer de link opnieuw.",
+        "activate_camera": "Activeer je camera",
+        "nickname_placeholder": "Naam",
+        "nickname_empty_error": "Kies een naam",
+        "guest": "Gast"
+    }
+}
