--- a/src/i18n/no.json
+++ b/src/i18n/no.json
@@ -1,1 +1,13 @@
-{"translation":{"thanks_choosing":"Takk for at du valgte twinme!","next_time_app":"Prøv mobilappen for hele opplevelsen!","more_information":"Mer informasjon om","website_link":"<strong><a href='https://twin.me' target='_blank'>twinme</a></strong>","call":"Anrop","call_back":"Ring tilbake eller reaktiver koblingen.","activate_camera":"Aktiver kameraet ditt","nickname_placeholder":"Navn","nickname_empty_error":"Velg et navn","guest":"Gjest"}}
+{
+    "translation": {
+        "thanks_choosing": "Takk for at du valgte {{appName}}!",
+        "next_time_app": "Prøv mobilappen for hele opplevelsen!",
+        "more_information": "Mer informasjon om",
+        "call": "Anrop",
+        "call_back": "Ring tilbake eller reaktiver koblingen.",
+        "activate_camera": "Aktiver kameraet ditt",
+        "nickname_placeholder": "Navn",
+        "nickname_empty_error": "Velg et navn",
+        "guest": "Gjest"
+    }
+}
