--- a/src/i18n/tu.json
+++ b/src/i18n/tu.json
@@ -1,1 +1,13 @@
-{"translation":{"thanks_choosing":"twinme seçtiğiniz için teşekkürler!","next_time_app":"Eksiksiz deneyim için mobil uygulamayı deneyin!","more_information":"Daha fazla bilgi","website_link":"<strong><a href='https://twin.me' target='_blank'>twinme</a></strong>","call":"Arama","call_back":"Geri arayın veya bağlantıyı yeniden etkinleştirin.","activate_camera":"Kameranı etkinleştir","nickname_placeholder":"İsim","nickname_empty_error":"Bir isim seç","guest":"Misafir"}}
+{
+    "translation": {
+        "thanks_choosing": "{{appName}} seçtiğiniz için teşekkürler!",
+        "next_time_app": "Eksiksiz deneyim için mobil uygulamayı deneyin!",
+        "more_information": "Daha fazla bilgi",
+        "call": "Arama",
+        "call_back": "Geri arayın veya bağlantıyı yeniden etkinleştirin.",
+        "activate_camera": "Kameranı etkinleştir",
+        "nickname_placeholder": "İsim",
+        "nickname_empty_error": "Bir isim seç",
+        "guest": "Misafir"
+    }
+}
